--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,19 @@
-greeting:
-  message: "hello"
+quarkus:
+  http:
+    port: 8080
+    cors:
+      ~: true
+      origins: "*"
+      methods: GET,POST,PUT,DELETE,OPTIONS
+      headers: Content-Type,Authorization
+      exposed-headers: Content-Disposition
+      access-control-max-age: 24H
+      access-control-allow-credentials: true
+  package:
+    type: uber-jar
+
+  # Configuration pour la production
+  application:
+    name: btpxpress
+  banner:
+    enabled: false
