--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -92,6 +92,8 @@ EXPOSE 8080
 USER 185
 ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
 ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
+ENV SERVER_PORT=8088
+ENV CORS_ORIGINS=https://api.lions.dev
 
 ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
 
